--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 
 <body>
 
+    <div id="app">
+        <nav>
+            <img src="./assets/logo.svg" alt="logo do site" class="logo">
+            <ul>
+                <li>
+                    <a href="#" class="active">
+
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <main>
+            <div class="inner"></div>
+        </main>
+    </div>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 
 </html>
