--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
             <ul>
                 <li>
                     <a href="#" class="active">
-
+                        <ion-icon name="tablet-portrait"></ion-icon>
+                        Boards
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="people"></ion-icon>
+                        Equipes
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="document-text"></ion-icon>
+                        Relatórios
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="cog"></ion-icon>
+                        Ajustes
                     </a>
                 </li>
             </ul>
