--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
             </ul>
         </nav>
         <main>
-            <div class="inner"></div>
+            <div class="inner">
+                <section class="title-avatar">
+                    <h1>Meu Kanban <img src="./assets/pencil.svg" alt="icone pencil"></h1>
+                    <img src="https://github.com/pefecomemo.png" alt="avatar" />
+                </section>
+
+            </div>
         </main>
     </div>
 
