--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
                     <h1>Meu Kanban <img src="./assets/pencil.svg" alt="icone pencil"></h1>
                     <img src="https://github.com/pefecomemo.png" alt="avatar" />
                 </section>
+                <section class="filter">
+                    <button>
+                        <ion-icon name="filter-outline"></ion-icon>
+                        <span>Filtrar</span>
+                    </button>
+                    <div class="input-wrapper">
+                        <ion-icon name="search-outline"></ion-icon>
+                        <input type="text" placeholder="Busque por cards, assuntos ou responsáveis..." />
+                    </div>
+                </section>
 
             </div>
         </main>
