--- a/index.html
+++ b/index.html
@@ -59,6 +59,36 @@
                         <input type="text" placeholder="Busque por cards, assuntos ou responsáveis..." />
                     </div>
                 </section>
+                <section class="kanban">
+                    <div class="todo">
+                        <h2>A fazer</h2>
+                    </div>
+                    <div class="cards">
+                        <div class="card">
+                            <h3>#boraCodas um Kanban </h3>
+                            <p>
+                                Novo desafio do #boraCodar da Rocketseat, onde é proposto construit um quadro de Kanban.
+                            </p>
+                            <div class="tags">
+                                <span>
+                                    Rocketseat
+                                </span>
+                                <span>
+                                    Desafio
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="doing">
+                        <h2>Fazendo</h2>
+                    </div>
+                    <div class="done">
+                        <h2>Feito</h2>
+                    </div>
+                </section>
 
             </div>
         </main>
