--- a/index.html
+++ b/index.html
@@ -62,32 +62,75 @@
                 <section class="kanban">
                     <div class="todo">
                         <h2>A fazer</h2>
+                        <div class="cards">
+                            <div class="card">
+
+                                <h3>#boraCodar um Kanban </h3>
+                                <p>
+                                    Novo desafio do #boraCodar da Rocketseat, onde é proposto construit um quadro de Kanban.
+                                </p>
+                                <div class="tags">
+                                    <span>Rocketseat</span>
+                                    <span>Desafio</span>
+                                </div>
+                            </div>
+
+                            <div class="card">
+
+                                <h3>Manter a ofensiva </h3>
+                                <p>
+                                    Manter minha atividade na plataforma da Rockeseat para não perder a ofensiva
+                                </p>
+                                <div class="tags">
+                                    <span>Rocketseat</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="cards">
-                        <div class="card">
-                            <h3>#boraCodas um Kanban </h3>
-                            <p>
-                                Novo desafio do #boraCodar da Rocketseat, onde é proposto construit um quadro de Kanban.
-                            </p>
-                            <div class="tags">
-                                <span>
-                                    Rocketseat
-                                </span>
-                                <span>
-                                    Desafio
-                                </span>
+
+                    <div class="doing">
+                        <h2>Fazendo</h2>
+                        <div class="cards">
+                            <div class="card">
+
+                                <h3>Conferir o novo desafio </h3>
+                                <p>
+                                    Conferir o novo projeto do #boraCodar para fazê-lo da melhor maneira possível
+                                </p>
+                                <div class="tags">
+                                    <span>
+                                        Rocketseat
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
 
 
 
-                    <div class="doing">
-                        <h2>Fazendo</h2>
-                    </div>
                     <div class="done">
                         <h2>Feito</h2>
+                        <div class="cards">
+                            <div class="card">
+                                <!-- inserir essa classe para por os 3 pontinhos no final "limit-text". Script no fim do body.-->
+                                <h3>#boraCodar um Kanban </h3>
+                                <p>
+                                    Novo desafio do #boraCodar da Rocketseat, onde é proposto construit um quadro de Kanban.
+                                </p>
+                                <div class="tags">
+                                    <span>
+                                        Rocketseat
+                                    </span>
+                                    <span>
+                                        Desafio
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
+
+
                 </section>
 
             </div>
